--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+
+
 * {
   margin: 0;
   padding: 0;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
-}
-
-html,
-body {
-  height: 100%;
+  font-family: "Inter";
 }
 
 html {
@@ -15,17 +12,24 @@ html {
 }
 
 body {
-  background-image: radial-gradient(#1a2197, #000);
-  color: #e3deff;
+  /* width: 100%; */
+  height: 100vh;
+}
+
+body {
+  background-image: radial-gradient(#151515, #0e0e0e);
+  color: #dbd1bf;
 }
 
 button {
-  background-color: #363fe2;
-  color: #e3deff;
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  background-color: #151515;
+  color: #dbd1bf;
   font-size: 4rem;
-  padding: 1.5rem 5rem 1.5rem 5rem;
-  border: 2px solid #e3deff;
-  border-radius: 2rem;
+  padding: 1.5rem 3rem 1.5rem 3rem;
+  border: 2px solid #dbd1bf;
+  border-radius: 0.8rem;
   cursor: pointer;
   font-weight: bold;
   text-transform: uppercase;
@@ -33,10 +37,9 @@ button {
 }
 
 button:hover {
-  background-color: #4b54f5;
+  background-color: #313131;
 }
 
 button:active {
-  background-color: #afb3fa;
+  background-color: #515151;
 }
-
