--- a/src/components/StartScreen.css
+++ b/src/components/StartScreen.css
@@ -1,3 +1,23 @@
 .start h1 {
-    font-size: 6.5rem;
+  font-size: 6.5rem;
+}
+.start {
+  gap: 3rem;
+  box-sizing: border-box;
+  padding-bottom: 5rem;
+  height: 100vh;
+  width: 40%;
+  font-size: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+h2 {
+  font-size: 2rem;
 }
